Reverted the change in r16683, which, while fixing an alignment issue in IE7 with the admin's "Save and continue editing" and "Save and add another" buttons, caused the swapping of those buttons' order. Thanks to jocmeh for the report. Refs #16852.
git-svn-id: http://code.djangoproject.com/svn/django/trunk@16835 bcc190cf-cafb-0310-a4f2-bffc1f526a37

--- a/django/contrib/admin/static/admin/css/forms.css
+++ b/django/contrib/admin/static/admin/css/forms.css
@@ -356,9 +356,3 @@ body.popup .submit-row {
 .empty-form {
     display: none;
 }
-
-/* IE7 specific bug fixes */
-
-.submit-row input {
-    float: right;
-}
